# webviewOnCpp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  webview.code-workspace
cmake/: macros.cmake
cmake/compiler/: msvc.cmake
cmake/platform/: windows.cmake
code/: CMakeLists.txt
code/main/: CMakeLists.txt  main.cpp
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.ts  main.tsx  style.css  vite-env.d.ts
